--- a/drawing/index.html
+++ b/drawing/index.html
@@ -26,8 +26,9 @@
 		this.w = w;
 		this.h = h;
 		this.color = color;
-		this.id = id
+		this.id = id;
 	}
+
 	// It can draw itself for now
 	Card.prototype.draw = function(){
 		ctx.fillStyle=this.color;
@@ -46,29 +47,13 @@
 		// The default view starts at the top left and fills the screen
 		this.x = 0;
 		this.y = 0;
-		/*var userPos = wams.getPosition(wams.uuid);
-		if(userPos==0){
-			this.x = 0;
-			this.y = 0;
-		}
-		else if(userPos==1){
-			this.x = 200;
-			this.y = 0;
-		}
-		else if(userPos==2){
-			this.x = 0;
-			this.y = 200;
-		}
-		else{	// userPos == 3
-			this.x = 200;
-			this.y = 200;
-		}*/
 		this.w = window.innerWidth;
 		this.h = window.innerHeight;
 		this.map = map;
 	}
 
 	View.prototype.move = function(dx, dy) {
+		//wams.emit("consoleLog", "Start of View.move");
 		// Moves the View about the Map
 		// If the view will stay in bounds, then make the change
 		var newx = this.x + dx;
@@ -88,9 +73,36 @@
 		this.draw();
 		// Report possible change to server
 		this.reportView();
+		//wams.emit("consoleLog", "End of View.move");
 	}
 
+	var setInitialPostion = false;
+	var numOtherClients = 0;
+	var numOtherClientsOld =0;
 	View.prototype.draw = function() {
+		//wams.emit("consoleLog", "Start of View.draw");
+
+		// Set the initial View Based on how many other people are there
+		// TODO: Switch from Absolute values to relative units
+		//		 Switch from basis on # of others, to available position
+		if(typeof wams.uuid == "string" && !setInitialPostion){	// Only set the initial position once/after the wams client server is running
+			setInitialPostion = true;
+			numOtherClients = wams.otherClients.length;
+			switch(numOtherClients){
+				case (1): myView.move(1600,0); break;
+				case (2): myView.move(0,900); break;
+				case (3): myView.move(1600,900); break;
+				default: this.reportView();
+			}
+		}
+		
+		// If there is a change in # of people, report your view
+		numOtherClients = wams.otherClients.length;
+		if(numOtherClientsOld != numOtherClients){
+			numOtherClientsOld = numOtherClients;
+			this.reportView();
+		}
+		
 		// Grab the model
 		var model = this.map.model;
 		// Clear the canvas
@@ -106,8 +118,6 @@
 		// And draw the other user's viewport boundaries
 		for (var i = 0, len = wams.otherClients.length; i < len; i++) {
 			var otherView = wams.otherClients[i].view;
-			console.log(wams.otherClients[i]);
-			console.log(typeof otherView);
 			if (typeof otherView !== "undefined") {
 				var color = wams.otherClients[i].description.color;
 				ctx.beginPath();
@@ -115,11 +125,11 @@
 				ctx.lineWidth = "2";
 				ctx.rect(otherView.x, otherView.y, otherView.w, otherView.h);
 				ctx.stroke();
-				//console.log("Drawing user view #" + i);
-				wams.emit("consoleLog", "Drawing user view #"+i);
+				//wams.emit("consoleLog", "Drawing user view #"+i);
 			}
 		}
 		ctx.restore();
+		//wams.emit("consoleLog", "End of View.draw");
 	}
 
 	View.prototype.reportView = function() {
@@ -129,6 +139,7 @@
 	}
 
 	function resizeCanvas() {
+		//wams.emit("consoleLog", "Start of resizeCanvas");
 		// Resize the view and canvas to the window
 		// Dont set the view larger than there is map to show
 		myView.w = Math.min(window.innerWidth, myView.map.w - myView.x);
@@ -139,6 +150,7 @@
 		myView.draw();
 		// Report possible change to server
 		myView.reportView();
+		//wams.emit("consoleLog", "End of resizeCanvas");
 	}
 
 	function handleInput(e) {
@@ -160,18 +172,12 @@
 	}
 
 	function onWindowLoad() {
+		//wams.emit("consoleLog", "Start of onWindowLoad");
 		// Make the model and populate it
-		cards = new Array();
 		//cards[0] = new Card(50, 50, 20, 20,"black");
-		/*if(wams.otherClients[0] !== "undefined"){
-			for(var i=0; i < wams.otherClients[0].cards.length;++i){
-				var oldCard = wams.otherClients[0].cards[i]
-				cards[i] = new Card(oldCard.x, oldCard.y, oldCard.h, oldCard.w, oldCard.color, oldCard.id);
-			}
-		}*/
 
 		// Set up the Map with the model
-		myMap = new Map(2000,2000, cards);
+		myMap = new Map(5000,5000, cards);
 
 		// Set up the View on the Map
 		myView = new View(myMap);
@@ -191,6 +197,7 @@
 		canvas.addEventListener('mousemove', mousemove, false);
 		// Redraw the view
 		myView.draw();
+		//wams.emit("consoleLog", "End of onWindowLoad");
 	}
 
 	var cardIndex = -1;	// Index of the card to be dragged, -1 indicates no card should be dragging
@@ -244,15 +251,17 @@
    	}
 
    	var color = rndColor();
+   	var cards = new Array();
    	var myCardColor = rndColor();
 
-	// Create new WAMS object
-	var wams = new WAMS({color: color}); 
+   	// Create new WAMS object
+	var wams = new WAMS({color: color});
 
 	wams.on("newCard", onNewCard);
 	wams.on("updateUserView", onUpdateUserView);
 	wams.on("updateCard", onUpdateCard);
 	
+	// Recieve the newly created card to be added
 	function onNewCard(data) {
 		var newCard = new Card(data.data.x, data.data.y, data.data.h, data.data.w, data.data.color, data.data.id);
 		cards.push(newCard);
@@ -265,9 +274,7 @@
 		// Then update their view object
 		for (var i = 0, len = wams.otherClients.length; i < len; i++) {
 			if (wams.otherClients[i].uuid == data.source) {
-				console.log("found user");
 				wams.otherClients[i].view = data.data;
-				console.log(wams.otherClients[i].view);
 				break;
 			}
 		}
@@ -275,6 +282,7 @@
 		myView.draw();
 	}
 
+	// Recieve which card needs to be updated
 	function onUpdateCard(updatedCard){
 		for (var i = 0; i < cards.length; i++) {
 			if(cards[i].id == updatedCard.data.id){
@@ -284,7 +292,6 @@
 			}
 		}
 	}
-
 
 	</script>
 </body>
