--- a/drawing/index.html
+++ b/drawing/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Canvas Testing</title>
 
-	<script src="/socket.io/socket.io.js"></script> <!-- REQUIRED! WAMS uses Socket.IO for communication between server and clients. -->
+	<script src="/socket.io/socket.io.js"></script>  <!-- REQUIRED! WAMS uses Socket.IO for communication between server and clients. -->
 	<script src="/libs/wams-client.js"></script> <!-- REQUIRED! Import main WAMS-library -->
 	<style>
 		* { margin: 0px; padding: 0px; }
@@ -16,6 +16,18 @@
 <body>
 	<canvas id='main'></canvas>
 	<script>
+
+	// Generate a random name to assign to this user
+	var sampleNames = [
+		'Fe', 'Thomas', 'Kirstie', 'Wynell', 'Mario', 'Aretha', 'Cherryl', 'Ta',
+		'Lindy', 'Karina', 'Sacha', 'Latesha', 'Miki', 'Janel', 'Leola', 'Romeo',
+		'Roderick', 'Felica', 'Ilona', 'Nila', 'Patrina', 'Wes', 'Henry', 'Elvera',
+		'Karrie', 'Jacklyn', 'Alethea', 'Emogene', 'Alphonso', 'Chandra', 'Beryl',
+		'Lilly', 'Georgetta', 'Darrin', 'Deane', 'Rocio', 'Charissa', 'Simona',
+		'Don', 'Arianne', 'Esther', 'Leonia', 'Karma', 'Rosemarie', 'Carolyn',
+		'Miriam', 'Chastity', 'Vesta', 'Christian', 'Lashaun'
+	].sort();
+	var rndName = sampleNames[Math.floor(Math.random() * sampleNames.length)];
 
 	// Card class
 	// This will be the items in our simple array model
@@ -49,11 +61,23 @@
 		this.y = 0;
 		this.w = window.innerWidth;
 		this.h = window.innerHeight;
+		this.position = -1;
+		this.scale = 1;
+		this.color = rndColor();
+		this.name = rndName;
 		this.map = map;
+		// this.ew = window.innerWidth;
+		// this.eh = window.innerHeight;
 	}
 
 	View.prototype.move = function(dx, dy) {
-		//wams.emit("consoleLog", "Start of View.move");
+		// wams.emit("consoleLog", "Start of View.move");
+		
+		// Filter out meaningless moves
+		if (dx == 0 && dy == 0 ) {
+			return;
+		}
+		
 		// Moves the View about the Map
 		// If the view will stay in bounds, then make the change
 		var newx = this.x + dx;
@@ -68,32 +92,53 @@
 			wams.emit("consoleLog", "Hit The Boundaries");
 		}
 		// Resize the canvas, since we may have left the border area
-		resizeCanvas();
+		// resizeCanvas();
 		// Redraw view
 		this.draw();
+
 		// Report possible change to server
 		this.reportView();
-		//wams.emit("consoleLog", "End of View.move");
+		// wams.emit("consoleLog", "End of View.move");
 	}
 
-	var setInitialPostion = false;
-	var numOtherClients = 0;
-	var numOtherClientsOld =0;
+	// Move your top Left Corner to (x,y)
+	View.prototype.moveToXY = function(x,y){
+		this.x = x;
+		this.y = y;
+	}
+
+	// Move your View relative to your anchor point for when you resize, anchor point is center of Map
+	// | 0 | 1 |	All Views should have * as an anchor point, * should remain in the Bottom Right corner of 0
+	// ----*----	* should remain in the Bottom Right corner of 0, Bottom Left of 1, Top Right of 2, Top Left of 3
+	// | 2 | 3 |
+	View.prototype.moveToAnchor = function(){
+		switch(myView.position){
+			case (0): myView.moveToXY(canvasWidth/2 + 100,canvasHeight/2 +100); myView.move(-myView.w,-myView.h); break;
+			case (1): myView.moveToXY(canvasWidth/2 -100,canvasHeight/2 +100); myView.move(0,-myView.h); break;
+			case (2): myView.moveToXY(canvasWidth/2 +100,canvasHeight/2 -100); myView.move(-myView.w,0); break;
+			case (3): myView.moveToXY(canvasWidth/2 -100,canvasHeight/2 -100); this.reportView(); break;
+			default: this.reportView();
+		}
+	}
+
+	var setInitialPostion = false,
+	 	numOtherClients = 0,
+		numOtherClientsOld = 0;
 	View.prototype.draw = function() {
-		//wams.emit("consoleLog", "Start of View.draw");
+		// wams.emit("consoleLog", "Start of View.draw");
 
 		// Set the initial View Based on how many other people are there
-		// TODO: Switch from Absolute values to relative units
-		//		 Switch from basis on # of others, to available position
+		// TODO: Switch from basis on # of others, to available position
 		if(typeof wams.uuid == "string" && !setInitialPostion){	// Only set the initial position once/after the wams client server is running
 			setInitialPostion = true;
-			numOtherClients = wams.otherClients.length;
-			switch(numOtherClients){
-				case (1): myView.move(1600,0); break;
-				case (2): myView.move(0,900); break;
-				case (3): myView.move(1600,900); break;
-				default: this.reportView();
-			}
+			myView.position = wams.otherClients.length;
+
+			// Assign View Space for the 4-Square View Model
+			this.moveToAnchor();
+			
+			// Assign Positions for the Array View Model
+			// TODO: Switch from absolute values to relative units
+			// myView.move(position*(myView.w-100),300);
 		}
 		
 		// If there is a change in # of people, report your view
@@ -122,35 +167,56 @@
 				var color = wams.otherClients[i].description.color;
 				ctx.beginPath();
 				ctx.strokeStyle = color;
-				ctx.lineWidth = "2";
+				ctx.lineWidth = "3";
 				ctx.rect(otherView.x, otherView.y, otherView.w, otherView.h);
 				ctx.stroke();
-				//wams.emit("consoleLog", "Drawing user view #"+i);
+
+				// Draw their name
+				ctx.fillStyle = 'black';
+				ctx.font = "24px Georgia";
+				ctx.fillText(otherView.name, otherView.x*this.scale+20, otherView.y*this.scale+40);
+				// wams.emit("consoleLog", "Drawing user view #"+i);
 			}
 		}
 		ctx.restore();
-		//wams.emit("consoleLog", "End of View.draw");
+		// wams.emit("consoleLog", "End of View.draw");
 	}
 
 	View.prototype.reportView = function() {
 		// Tell the server about my view
-		var newview = {x: this.x, y: this.y, w: this.w, h: this.h};
-		wams.emit("updateUserView", newview);
+		var newView = {
+			x : this.x,
+			y : this.y,
+			w : this.w,
+			h : this.h,
+			ew : this.ew,
+			eh : this.eh,
+			scale : this.scale,
+			color : this.color,
+			name : this.name
+		}; // TODO: Strip extra information from object more elegantly
+		wams.emit("updateUserView", newView);
 	}
 
 	function resizeCanvas() {
-		//wams.emit("consoleLog", "Start of resizeCanvas");
+		// wams.emit("consoleLog", "Start of resizeCanvas");
 		// Resize the view and canvas to the window
 		// Dont set the view larger than there is map to show
 		myView.w = Math.min(window.innerWidth, myView.map.w - myView.x);
 		myView.h = Math.min(window.innerHeight, myView.map.h - myView.y);
 		canvas.width = myView.w;
 		canvas.height = myView.h;
-		// Redraw view
-		myView.draw();
-		// Report possible change to server
-		myView.reportView();
-		//wams.emit("consoleLog", "End of resizeCanvas");
+
+		if(typeof wams.uuid == "string"){	// If wams is initialized
+			myView.moveToAnchor();
+		}
+		else{
+			// Redraw view
+			myView.draw();
+			// Report possible change to server
+			myView.reportView();
+			// wams.emit("consoleLog", "End of resizeCanvas");
+		}
 	}
 
 	function handleInput(e) {
@@ -171,13 +237,17 @@
 		}
 	}
 
+	var canvasWidth = 7000, canvasHeight = 7000;
 	function onWindowLoad() {
-		//wams.emit("consoleLog", "Start of onWindowLoad");
+		// wams.emit("consoleLog", "Start of onWindowLoad");
 		// Make the model and populate it
-		//cards[0] = new Card(50, 50, 20, 20,"black");
+		// cards[0] = new Card(50, 50, 20, 20,"black");
 
-		// Set up the Map with the model
-		myMap = new Map(5000,5000, cards);
+		// Set up the Map for the 4-Square View Model
+		myMap = new Map(canvasWidth,canvasHeight, cards);
+
+		// Set up the Map for the Array View Model
+		// myMap = new Map(10000,2000, cards);
 
 		// Set up the View on the Map
 		myView = new View(myMap);
@@ -197,20 +267,27 @@
 		canvas.addEventListener('mousemove', mousemove, false);
 		// Redraw the view
 		myView.draw();
-		//wams.emit("consoleLog", "End of onWindowLoad");
+		// wams.emit("consoleLog", "End of onWindowLoad");
 	}
 
-	var cardIndex = -1;	// Index of the card to be dragged, -1 indicates no card should be dragging
-
+	var cardIndex = -1,	// Index of the card to be dragged, -1 indicates no card should be dragging
+		firstClick=0, 	// TimeStamp of first click
+		secondClick=0, 	// TimeStamp of second click
+		isDoubleClick=false, 
+		doubleClickThreshold = 250;	// 250ms
+	// TODO: Make Single click scroll Map Space
 	function canvasClick(e) {
 		var x = e.x + myView.x;
 		var y = e.y + myView.y;
-		cardIndex = clickOnCard(x,y);
-		if(	cardIndex == -1){	// If you didn't click on a card, create a new one
-			var newCard = new Card(x-15, y-15, 30, 30, myCardColor, -1);
-			wams.emit("newCard", newCard);	// Tell everyone you created a new card
-			// Redraw view
-			myView.draw();
+		cardIndex = clickOnCard(x,y); // CardIndex of the card clicked on, -1 if no card was clicked
+		if(	cardIndex == -1){	// If you didn't click on a card
+			firstClick = new Date().getTime();
+			isDoubleClick = firstClick - secondClick < doubleClickThreshold;
+			if(isDoubleClick){	// Create new Card only if double clicked
+				var newCard = new Card(x-25, y-25, 50, 50, myCardColor, -1);
+				wams.emit("newCard", newCard);	// Tell everyone you created a new card
+			}
+			secondClick = firstClick;
 		}
 	}
 
@@ -246,16 +323,20 @@
 	// Generate a random color to assign to this user
 	var rndColor = function() {
     	var bg_colour = Math.floor(Math.random() * 16777215).toString(16);
-      	bg_colour = "#"+("000000" + bg_colour).slice(-6);
+      	// bg_colour = "#"+("000000" + bg_colour).slice(-6);	// Won't generate red colours
+      	bg_colour = "#" + bg_colour;
       	return bg_colour;
    	}
 
-   	var color = rndColor();
    	var cards = new Array();
    	var myCardColor = rndColor();
 
    	// Create new WAMS object
-	var wams = new WAMS({color: color});
+	var wams = new WAMS({
+		color: rndColor,
+		name: name, 
+		path: window.location.pathname
+	});
 
 	wams.on("newCard", onNewCard);
 	wams.on("updateUserView", onUpdateUserView);
